[package]
name = "pornolizer8"
version = "0.1.0"
authors = ["Andy Dixon <andy@andydixon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
titlecase = "1.1.0"
rand = "0.7.3"
indexmap = "1.6.0"
crabquery = "0.1.0"
error-chain = "0.12.4"
reqwest = {version="0.10.8", features = ["blocking"]}